pytigergraph/1.6/release-notes.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/)[Next](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  *     * [Overview](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  *     * [Getting Started](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/)
      * [Installing pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/install)
      * [Connecting to TigerGraph](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/connection)
      * [pyTigerGraph 101](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/101)
  *     * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/)
      * [TigerGraphConnection](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/base)
      * [Authentication Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth)
      * [Vertex Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex)
      * [Edge Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/edge)
      * [Query Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/query)
      * [UDT Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/udt)
      * [GSQL Interface](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/gsql)
      * [Loading Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/loading)
      * [Path Finding Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/path)
      * [Schema Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/schema)
      * [Utility Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/utils)
  *     * [GDS Functions](https://docs.tigergraph.com/pytigergraph/1.6/gds/)
      * [Factory Functions](https://docs.tigergraph.com/pytigergraph/1.6/gds/gds)
      * [Data Loaders](https://docs.tigergraph.com/pytigergraph/1.6/gds/dataloaders)
      * [Featurizer](https://docs.tigergraph.com/pytigergraph/1.6/gds/featurizer)
      * [Metrics](https://docs.tigergraph.com/pytigergraph/1.6/gds/metrics)
      * [Splitters](https://docs.tigergraph.com/pytigergraph/1.6/gds/splitters)
      * [Transforms](https://docs.tigergraph.com/pytigergraph/1.6/gds/transforms)
        * [PyTorch Geometric Transforms](https://docs.tigergraph.com/pytigergraph/1.6/gds/pyg_transforms)
        * [NodePiece Transforms](https://docs.tigergraph.com/pytigergraph/1.6/gds/nodepiece_transforms)
      * [Trainer](https://docs.tigergraph.com/pytigergraph/1.6/gds/trainer)
      * [Models](https://docs.tigergraph.com/pytigergraph/1.6/gds/models)
        * [GraphSAGE](https://docs.tigergraph.com/pytigergraph/1.6/gds/graphsage)
        * [NodePiece](https://docs.tigergraph.com/pytigergraph/1.6/gds/nodepiece)
  *     * [TigerGraph CoPilot](https://docs.tigergraph.com/pytigergraph/1.6/ai/copilot)
  *     * [Datasets](https://docs.tigergraph.com/pytigergraph/1.6/datasets/datasets)
      * [Dataset Object](https://docs.tigergraph.com/pytigergraph/1.6/datasets/datasets_object)
  *     * [Visualization](https://docs.tigergraph.com/pytigergraph/1.6/visualization/visualization)
  *     * [Object Oriented Schema](https://docs.tigergraph.com/pytigergraph/1.6/object_oriented_schema/schema-def)
  *     * [Contributing](https://docs.tigergraph.com/pytigergraph/1.6/contributing/)
  *     * [Release Notes](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/)
      * [Legacy Version Documentation](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/legacy-tg-versions)


pyTigerGraph 1.6
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [pyTigerGraph 1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [Release Notes](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/)


[Edit this Page](https://github.com/tigergraph/pytigergraph-docs/edit/v1.6/modules/release-notes/pages/index.adoc)
### Contents
  * [[1.6] - 2024-04-30](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_6_2024_04_30)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added)
  * [[1.5] - 2023-09-25](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_5_2023_09_25)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_2)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed)
  * [[1.4] - 2023-05-16](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_4_2023_05_16)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_3)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_2)
  * [[1.3] - 2023-02-01](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_3_2023_02_01)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_4)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_3)
  * [Fixed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_fixed)
  * [[1.2] - 2022-11-09](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_2_2022_11_09)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_5)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_4)
  * [[1.1] - 2022-09-06](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_1_2022_09_06)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_6)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_5)
  * [[1.0] - 2022-07-11](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_0_2022_07_11)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_7)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_6)
  * [[0.9.1] - 2022-06-21](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_0_9_1_2022_06_21)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_7)
  * [[0.9] - 2022-05-16](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_0_9_2022_05_16)
  * [New Features](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_new_features)
  * [Other Changes](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_other_changes)


# pyTigerGraph Release Notes
### Contents
  * [[1.6] - 2024-04-30](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_6_2024_04_30)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added)
  * [[1.5] - 2023-09-25](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_5_2023_09_25)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_2)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed)
  * [[1.4] - 2023-05-16](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_4_2023_05_16)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_3)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_2)
  * [[1.3] - 2023-02-01](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_3_2023_02_01)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_4)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_3)
  * [Fixed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_fixed)
  * [[1.2] - 2022-11-09](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_2_2022_11_09)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_5)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_4)
  * [[1.1] - 2022-09-06](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_1_2022_09_06)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_6)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_5)
  * [[1.0] - 2022-07-11](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_0_2022_07_11)
  * [Added:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_7)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_6)
  * [[0.9.1] - 2022-06-21](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_0_9_1_2022_06_21)
  * [Changed:](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_7)
  * [[0.9] - 2022-05-16](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_0_9_2022_05_16)
  * [New Features](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_new_features)
  * [Other Changes](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_other_changes)


## [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_6_2024_04_30)[1.6] - 2024-04-30
Release of pyTigerGraph version 1.6.
### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added)Added:
  * [TigerGraph CoPilot](https://docs.tigergraph.com/pytigergraph/1.8/ai/copilot). Added a new submodule for interacting with TigerGraph CoPilot, a framework for integrating Generative AI with TigerGraph.


## [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_5_2023_09_25)[1.5] - 2023-09-25
Release of pyTigerGraph version 1.5.
### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_2)Added:
  * [Object-oriented schema definition and modifcation](https://docs.tigergraph.com/pytigergraph/1.8/object_oriented_schema/schema-def). Define graph schemas in native Python, without knowing GSQL.
  * `gsql()` handles some common error cases and raises an exception if they occur.


### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed)Changed:
  * Dataloaders that experience a parsing error due to missing/dirty data handle the error more gracefully.
  * Removed the use of pyTigerDriver for GSQL operations.
  * Various bug fixes.


## [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_4_2023_05_16)[1.4] - 2023-05-16
Release of pyTigerGraph version 1.4.
**Note:** if you are using the Graph Data Science dataloaders, you must upgrade both the ML Workbench and pyTigerGraph to 1.4 at the same time. There is a incompatibility between v1.3 and v1.4 of pyTigerGraph and the corresponding ML Workbench versions.
### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_3)Added:
  * Additional Query Management Support
    * [`showQuery()`](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_showquery) returns the GSQL of a given query.
    * [`getQueryMetadata()`](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getquerymetadata) returns the metadata details about a query, such as input parameters and what is returned in `PRINT` statements.
    * [`getRunningQueries()`](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_getrunningqueries) shows the statistics of queries currently running on the graph.
    * [`abortQuery()`](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query#_abortquery) aborts a selected query by ID or all queries on the graph.
  * Additional System Management Support
    * [`ping()`](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/utils#_ping) is a public API to check the health of the TigerGraph server.
    * [`getSystemMetrics()`](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/utils#_getsystemmetrics) monitors system metrics such as CPU and RAM usage.
    * [`getQueryPerformance()`](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/utils#_getqueryperformance) returns real-time query performance statistics over a given period.
    * [`getServiceStatus()`](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/utils#_getservicestatus) returns the status of TigerGraph services specified in the request.
    * [`rebuildGraph()`](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/utils#_rebuildgraph) [rebuilds](https://docs.tigergraph.com/tigergraph-server/3.9/API/built-in-endpoints#_rebuild_graph_engine) the graph immediately.
  * Built in Graph ML models and Trainer
    * [Various GraphSAGE models](https://docs.tigergraph.com/pytigergraph/1.8/gds/graphsage) for vertex classification and regression, as well as link prediction.
    * [NodePiece MLP model](https://docs.tigergraph.com/pytigergraph/1.8/gds/nodepiece) for vertex classification.
    * [General purpose trainer](https://docs.tigergraph.com/pytigergraph/1.8/gds/trainer) to enable training of Graph ML models in a concise fashion.
  * Transforms
    * [`PyGTemporalTransform`](https://docs.tigergraph.com/pytigergraph/1.8/gds/pyg_transforms) to create a sequence of subgraphs for a given batch of data, in a temporal manner.
    * [`NodePieceMLPTransform`](https://docs.tigergraph.com/pytigergraph/1.8/gds/nodepiece_transforms) to transform a batch produced by a NodePiece dataloader into a batch that can be fed into a PyTorch multilayer perceptron.
  * Additional Dataloader Support
    * SSL Support: two-way SSL encryption via Kerberos.
    * Collaborative dataloaders: use dataloaders on multiple machines to pull batches from the same Kafka queue. Helpful for data distributed model training.
    * Datetime support in dataloaders: Output `DATETIME` attributes from the database using the dataloaders. Exports as UNIX epoch timestamps.
    * Optional `distributed_query` parameter in dataloaders if running on distributed database clusters. If set to True, installs the dataloader using the `DISTRIBUTED` keyword in the query heading. Useful for distributed database clusters.
    * `stop()` function in dataloaders: Kill the query producing batches for the dataloader immediately. Helpful for stopping the production of batches sent to Kafka after breaking out of a training loop.


### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_2)Changed:
  * Dataloader factory produces multiple dataloaders if `filter_by` is a list of different filters.
  * Improved the scalability of the NodePiece dataloader.


## [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_3_2023_02_01)[1.3] - 2023-02-01
Release of pyTigerGraph version 1.3.
### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_4)Added:
  * Two new dataloaders: HGTLoader and NodePiece
    * The HGTLoader is a data loader that performs stratified neighbor sampling [Heterogeneous Graph Transformer](https://arxiv.org/abs/2003.01332).
    * NodePiece is a scalable graph embedding approach introduced in [NodePiece: Compositional and Parameter-Efficient Representations of Large Knowledge Graphs](https://arxiv.org/abs/2106.12144)
  * Callback functions to all dataloaders: write functions to process the batch in a background thread before it is passed into the training loop.


### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_3)Changed:
  * Added better error messaging when REST requests are incorrect.
  * Template query support in the featurizer (requires TigerGraph Database 3.9+)
  * Data splitters automatically perform a schema change if needed to add attributes to the database.


### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_fixed)Fixed:
  * Fixed how custom SSL certificates were handled when instantiating the GSQL client.


## [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_2_2022_11_09)[1.2] - 2022-11-09
Release of pyTigerGraph version 1.2.
### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_5)Added:
  * The `Datasets` class, a way to easily import standard datasets into a database instance.
  * The `visualizeSchema` function to visualize graph schemas.
  * Proper deprecation warnings.
  * Logging capabilities using native Python logging tools.
  * Ability to run asynchronous queries from `runInstalledQuery()`


### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_4)Changed:
  * Many changes to the `featurizer` capability, including:
    * Automatically selecting the correct version of a graph data science algorithm given your version of the database.
    * Automatically creating the schema change necessary to run the algorithm and store the results to an attribute.
    * If the algorithm is not already installed at runtime, and is included in the TigerGraph Graph Data Science Library, the algorithm will be installed automatically.
    * Adding more supported algorithms, in categories such as similarity and topological link prediction.


## [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_1_2022_09_06)[1.1] - 2022-09-06
Release of pyTigerGraph version 1.1.
### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_6)Added:
  * TensorFlow support for homogeneous GNNs via the Spektral library.
  * Heterogeneous Graph Dataloading support for DGL.
  * Support of lists of strings in dataloaders.


### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_5)Changed:
  * Fixed KeyError when creating a data loader on a graph where PrimaryIdAsAttribute is False.
  * Error catch if Kafka dataloader doesn’t run in async mode.
  * Refresh schema during dataloader instantiation and featurizer attribute addition.
  * Reduce connection instantiation time.
  * Reinstall query if it is disabled.
  * Confirm Kafka topic is created before subscription.
  * More efficient use of Kafka resources.
  * Allow multiple consumers on the same data.
  * Improved deprecation warnings.


## [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_1_0_2022_07_11)[1.0] - 2022-07-11
Release of pyTigerGraph version 1.0, in conjunction with version 1.0 of the [TigerGraph Machine Learning Workbench](https://docs.tigergraph.com/ml-workbench/current/overview/).
### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_added_7)Added:
  * Kafka authentication support for ML Workbench enterprise users.
  * Custom query support for Featurizer, allowing developers to generate their own graph-based features as well as use our [built-in Graph Data Science algorithms](https://docs.tigergraph.com/graph-ml/current/intro/).


### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_6)Changed:
  * Additional testing of GDS functionality
  * More demos and tutorials for TigerGraph ML Workbench, found [here](https://github.com/TigerGraph-DevLabs/mlworkbench-docs).
  * Various bug fixes.


## [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_0_9_1_2022_06_21)[0.9.1] - 2022-06-21
Added new parameter, `tgCloud` for when connecting to a TigerGraph Cloud instance. Set to `True` if using a new TigerGraph Cloud
### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_changed_7)Changed:
  * Deprecated `gcp` parameter, as `tgCloud` supercedes this. Existing code will be compatible.


## [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_0_9_2022_05_16)[0.9] - 2022-05-16
We are excited to announce the pyTigerGraph v0.9 release! This release adds many new features for graph machine learning and graph data science, a refactoring of core code, and more robust testing. Additionally, we have officially “graduated” it to an official TigerGraph product. This means brand-new documentation, a new GitHub repository, and future feature enhancements.
We are committed to keeping pyTigerGraph true to its roots as an open-source project. Check out the [Contributing](https://docs.tigergraph.com/pytigergraph/1.6/contributing/) page and our [GitHub Issues page](https://github.com/tigergraph/pyTigerGraph/issues) if you want to help with pyTigerGraph’s development.
pyTigerGraph 0.9 was released on May 16th, 2022.
### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_new_features)New Features
#### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_graph_data_science_capability)Graph Data Science Capability
Many new capabilities added for graph data science and graph machine learning.
  * Data loaders for training Graph Neural Networks in DGL and PyTorch Geometric
  * A "featurizer" to generate graph-based features
  * Metric trackers for precision, recall, and accuracy
  * Vertex and edge splitters for generation of train/validation/testing splits.


### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_other_changes)Other Changes
#### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_documentation)Documentation
We have moved the documentation to the [official TigerGraph Documentation site ](https://docs.tigergraph.com/pytigergraph/current/intro/) and updated many of the contents with type hints and more descriptive parameter explanations.
#### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_testing)Testing
There is now well-defined testing for every function in the package. A more defined testing framework is coming soon.
#### [](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/#_code_structure)Code Structure
A major refactor of the codebase was performed. No breaking changes were made to accomplish this.
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


